--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         j.async = true
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
         f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-57M7L4P')
+      })(window, document, 'script', 'dataLayer', 'GTM-PRLLJV3')
     </script>
     <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,7 +34,7 @@
     />
     <title>Автошкола Driving</title>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDLEE55Q3R"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RBNGH7911"></script>
     <script>
       window.dataLayer = window.dataLayer || []
       function gtag() {
@@ -42,14 +42,14 @@
       }
       gtag('js', new Date())
 
-      gtag('config', 'G-NDLEE55Q3R')
+      gtag('config', 'G-1RBNGH7911')
     </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-57M7L4P"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PRLLJV3"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
